--- a/_posts/2019-12-19-the-us-narrative-today.html
+++ b/_posts/2019-12-19-the-us-narrative-today.html
@@ -1684,107 +1684,107 @@ stories:
   domain: http://www.moultrienews.com/
   link: https://www.moultrienews.com/sports/unbeaten-bishops-launch-into-state-rankings/article_35d880c4-228a-11ea-b195-cf42ed8eefd6.html
 images:
-- name: server-cloud-server-racks-door-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-light-dali.jpg
-- name: oldhouse-granaryfield-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-internet-numbers.jpg
-- name: oldhouse-oldhouse-purple-storm.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-purple-storm.jpg
-- name: old-granary-field-granaryfield-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-sand-paper.jpg
-- name: gypsymosaic-gypsy-eyes-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-sunday.jpg
-- name: old-building-clouds-with-tree-uncle-sam.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-building-clouds-with-tree-uncle-sam.jpg
-- name: bf-skinner-castle-window_35928999923_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-castle-window_35928999923_o.jpg
-- name: rain-princess-butterfly-purple-flower.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-butterfly-purple-flower.jpg
-- name: mediterranean-mediterranean-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-crafty-painting.jpg
-- name: downtown-la-dark-dali.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-la-dark-dali.JPG
-- name: store-on-corner-oldcabin-colorful-dream.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin-colorful-dream.jpg
-- name: white-house-lawn-white-house-window-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-gan-vogh.jpg
-- name: old-door-lock-old-door-lock-2-diego-rivera1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-diego-rivera1.jpg
-- name: rain-princess-DSC_0017.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-DSC_0017.jpg
-- name: aws-s3-stories-new-69-120-800-500-0-max-0--5--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-69-120-800-500-0-max-0--5--1.jpg
-- name: oldbarn-oldbarn-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-crafty-painting.jpg
-- name: abe-lincoln-one-purp-paper-file-00-00-15-87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe-lincoln-one-purp-paper-file-00-00-15-87.jpg
-- name: stalin-time-old-building-barcelona-waterfront.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-old-building-barcelona-waterfront.jpg
-- name: stalin-time-seattle-public-market_36725946605_o.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-seattle-public-market_36725946605_o.jpg
-- name: white-house-lawn-white-house-window-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-window-atari-missle.jpg
-- name: statue-face-open-mouth-statue-face-open-mouth-colored-circuits.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-colored-circuits.png
-- name: oldsmallboat-oldsmallboat-matrix.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-matrix.jpg
-- name: legal-statue-legalstatue-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-alien-goggles.jpg
-- name: gypsymosaic-gypsy-eyes-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsymosaic-gypsy-eyes-smooth-ride.jpg
-- name: paris-paris-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-ww2-color.jpg
-- name: oldcabin-oldcabin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin.jpg
-- name: crow-crow-internet-numbers.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow-crow-internet-numbers.jpg
-- name: stories-old-yellow-house.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-old-yellow-house.jpg
-- name: downtown-fredericksburg-downtown-fredericksburg-china-prop.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-fredericksburg-downtown-fredericksburg-china-prop.JPG
-- name: aws-s3-square-file-00-00-24-99-square.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-file-00-00-24-99-square.jpg
-- name: paris-paris-crafty-painting.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/paris-paris-crafty-painting.jpg
-- name: la-muse-dragon-desert-looking.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-dragon-desert-looking.jpg
-- name: abe_lincoln_one-oily_mcoilface-file-00_00_15_87.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abe_lincoln_one-oily_mcoilface-file-00_00_15_87.jpg
-- name: bf-skinner-train-small-town-station.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-train-small-town-station.jpg
-- name: oldhouse-oldhouse-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-dark-soul.jpg
-- name: border-crossing-bordercrossing-crabapple.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-crossing-bordercrossing-crabapple.png
-- name: art-museum-art-museum-attack-planes.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/art-museum-art-museum-attack-planes.jpg
-- name: rain-princess-border-crossing-through-fence.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-border-crossing-through-fence.jpg
-- name: oldbarn-oldbarn-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldbarn-oldbarn-light-dali.jpg
-- name: christianity-christianity-under-construction-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-blue-brush.jpg
-- name: dc-statue-dcstatue-dry-skin.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-dry-skin.jpg
-- name: oldhotel-oldhotel-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhotel-oldhotel-alien-goggles.jpg
-- name: oldcabin-oldcabin-alberto-giacometti.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-alberto-giacometti.jpg
-- name: border-fence-border-fence-on-hill-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/border-fence-border-fence-on-hill-umberto-bocc.jpg
-- name: oldhouse-granaryfield-atari-asteroids.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-atari-asteroids.jpg
-- name: liberty-back-statue-liberty-back-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-alien-goggles.jpg
-- name: death-valley-death-valley-national-park-oily-mcoilface.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/death-valley-death-valley-national-park-oily-mcoilface.jpg
-- name: old-door-lock-old-door-lock-alien-goggles.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-alien-goggles.jpg
-- name: aws-s3-stories-new-49-127-800-500-0-max-0-1--1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-49-127-800-500-0-max-0-1--1.jpg
-- name: power-lines-power-lines-empty-space-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-kandinsky-bv.jpg
-- name: old-door-lock-old-door-lock-2-copper-circuit-2.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-copper-circuit-2.jpg
+- name: razorcliff-razorcliff-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-pablo-blue.jpg
+- name: eduardo-eduardo-colored-circuits.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/eduardo-eduardo-colored-circuits.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-horiz-circuit.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-horiz-circuit.png
+- name: copper-circuit-fat-old-pigeon-on-fence.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-fat-old-pigeon-on-fence.jpg
+- name: rain-princess-P5290036.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-P5290036.jpg
+- name: miamibeach-miamibeach-clean-view.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-clean-view.jpg
+- name: old-granary-field-granaryfield-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-granaryfield-blue-granite.jpg
+- name: crow_gred_mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_gred_mash.jpg
+- name: bf-skinner-light-rail-yellow-calif.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-light-rail-yellow-calif.jpg
+- name: legal-statue-legalstatue-oily-mcoilface.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/legal-statue-legalstatue-oily-mcoilface.jpg
+- name: white-house-whitehouse-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-gred-mash.jpg
+- name: nazi-invasion-statue-facing-scrunched.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-statue-facing-scrunched.jpg
+- name: aws-s3-smithriver-smithriver-still.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-smithriver-smithriver-still.jpg
+- name: crow_far_away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_far_away.jpg
+- name: catacombs-catacombs-blue-granite.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-blue-granite.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-copper-circuit.jpg
+- name: ellis-island-ellisisland-mucha-mult.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/ellis-island-ellisisland-mucha-mult.jpg
+- name: mosaic-face-mosaic-face-atari-asteroids.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mosaic-face-mosaic-face-atari-asteroids.jpg
+- name: birdhouse-birdhouse-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-gan-vogh.jpg
+- name: walled-garden-walled-garden-feed-people.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-feed-people.jpg
+- name: dc-statue-dcstatue-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dc-statue-dcstatue-really-hot.jpg
+- name: store-on-corner-oldcabin.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/store-on-corner-oldcabin.jpg
+- name: subway-subway-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-hot-spicy.jpg
+- name: hollywood-building-hollywood-building-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-light-dali.jpg
+- name: window-window-alien-goggles.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/window-window-alien-goggles.jpg
+- name: windowmountain-window-mountain-gan-vogh.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/windowmountain-window-mountain-gan-vogh.jpg
+- name: old-door-lock-old-door-lock-cinnamon-rolls.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-cinnamon-rolls.jpg
+- name: redondo-beach-harbor-redondo-beach-harbor-free-woman.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-free-woman.jpg
+- name: copper-circuit-street-car-san-francisco.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-street-car-san-francisco.jpg
+- name: abandonedbuildings_crunch_paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/abandonedbuildings_crunch_paper.jpg
+- name: curtain-curtain-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-matrix.jpg
+- name: meadowbutterfly-meadow-butterfly-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-blue-circuit.jpg
+- name: old-door-lock-old-door-lock-2-blue-circuit-3.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-blue-circuit-3.jpg
+- name: flower-barbed-wire-flower-barbed-wire-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/flower-barbed-wire-flower-barbed-wire-space-pizza.jpg
+- name: carry-load-carryload-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-satan-red.jpg
+- name: subway-subway-crafty-painting.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/subway-subway-crafty-painting.jpg
+- name: fast-lights-freeway-redes-fast-flux-623x425-yellow-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fast-lights-freeway-redes-fast-flux-623x425-yellow-paper.jpg
+- name: server-cloud-server-racks-clouds-really-hot.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-really-hot.jpg
+- name: yosemite-yosemite-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/yosemite-yosemite-emily-carr.jpg
+- name: crypto-machine-bletchley-crypto-machine-bletchley-china-prop.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-china-prop.png
+- name: crypto-machine-bletchley-crypto-machine-bletchley-gan-vogh.png
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-gan-vogh.png
+- name: stories-green-gears-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-green-gears-matrix.jpg
+- name: old-barn-old-barn-1500-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-dark-dali.jpg
+- name: bluelake-colorful-dream-file-00-00-00-00.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-colorful-dream-file-00-00-00-00.jpg
+- name: server-cloud-server-racks-door-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-attack-planes.jpg
+- name: bordercrossing-bordercrossing-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bordercrossing-bordercrossing-pablo-blue.jpg
+- name: oldhouse-granaryfield-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-granaryfield-plentiful.jpg
+- name: statue-of-liberty-front-view-statueofliberty-copper-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-of-liberty-front-view-statueofliberty-copper-circuit.jpg
+- name: razorcliff-razorcliff-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-diego-rivera1.jpg
+- name: aws-s3-stories-status-berlin-dark-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-status-berlin-dark-dali.jpg
+- name: copper-circuit-fire-truck-pulling-out-of-station.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-fire-truck-pulling-out-of-station.jpg
 ---
 Area Charities Ready To Embrace Donations For The Needy.&nbsp;Clark County Home Invasion Robbery Ends In Arrest Of Juveniles.&nbsp;Local Bakery Gets Sucker Punched By Trademark Challenge.&nbsp;How North America Trade Deal Dealt A Setback To Big Pharma.&nbsp;Han Solo And Darth Vader.&nbsp;Villafranca Continues Golf Career Close To Home.&nbsp;Wisconsin, Baylor Enjoy The Ride As Each Seeks Its First National Volleyball Title.&nbsp;Pelosi Says Impeachment Leaves 'spring' In People's Step.&nbsp;
